[package]
name = "sourcegrab"
version = "0.1.0"
edition = "2024"

[dependencies]
dialoguer = "0.11"
indicatif = "0.17"
teloxide = { version = "0.12", features = ["macros", "auto-send"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
pretty_env_logger = "0.5"
uuid = { version = "1.3", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
dotenv = "0.15"
regex = "1"
